--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 env.py
 pandas_assessment.ipynb
-.DS_Store, .ipynb_checkpoints/, __pycache__, titanic.csv, iris.csv, env.py
+.DS_Store
+.ipynb_checkpoints/
+__pycache__
+titanic.csv
+iris.csv
+env.py
