--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ pandas_assessment.ipynb
 .DS_Store
 .ipynb_checkpoints/
 __pycache__
-titanic.csv
+titanic_df.csv
+iris_df.csv
 iris.csv
+titanic.csv
